# magma

./: BUILD.gn
gnbuild/: magma.gni
src/magma_util/platform/magenta/: magenta_platform_device.cc  magenta_platform_device.h
tests/: BUILD.gn
tests/vkcube/: BUILD.gn
tests/vulkan_shim/: BUILD.gn
